JumpScript/tests/baselines/reference/parserKeywordsAsIdentifierName2.errors.txt
tests/cases/conformance/parser/ecmascript5/parserKeywordsAsIdentifierName2.jump(2,1): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/parserKeywordsAsIdentifierName2.jump(2,12): error TS1010: '*/' expected.


==== tests/cases/conformance/parser/ecmascript5/parserKeywordsAsIdentifierName2.jump (2 errors) ====
    // 'public' should be marked unusable, should complain on trailing /*
    a.public /*
    ~
!!! error TS2304: Cannot find name 'a'.
               
!!! error TS1010: '*/' expected.